<resources>
    <string name="app_name">LGM Task 1</string>
    <string name="active">Active :</string>
    <string name="delta">Delta</string>
    <string name="confirmed">Confirmed :</string>
    <string name="migrated_others">Migrated Others :</string>
    <string name="deceased">Deceased :</string>
    <string name="recovered">Recovered :</string>
    <string name="note">Note :</string>
    <string name="state_name_cd">State Name(CD)</string>
    <string name="district_name">District Name</string>
    <string name="lgm">LGM</string>
    <string name="todo">TODO</string>
</resources>