<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700">

    <TextView
        android:id="@+id/state_name_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal"
        android:layout_marginVertical="@dimen/table_layout_margin_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/green"
        android:text="@string/state_name_cd"/>

    <TextView
        android:id="@+id/district_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal"
        android:layout_marginVertical="@dimen/table_layout_margin_vertical"
        android:layout_below="@id/state_name_code"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/district_name"
        android:background="@color/purple_200"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/district_name">
      <TableRow
          android:layout_marginVertical="@dimen/table_layout_margin_vertical"
          android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginVertical="2dp"
              android:text="@string/delta"
              android:gravity="center"
              android:layout_column="2"
              android:textColor="@color/black"
              android:background="@color/yellow"/>
      </TableRow>
        <TableRow
            android:layout_marginVertical="@dimen/table_layout_margin_vertical"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/gray"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
            <TextView
                android:id="@+id/district_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:textColor="@color/black"/>

        </TableRow>
        <TableRow
            android:layout_marginVertical="@dimen/table_layout_margin_vertical"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmed"
                android:textColor="@color/gray"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />
            <TextView
                android:id="@+id/district_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/delta_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_upward_24"
                android:contentDescription="@string/todo" />
        </TableRow>
        <TableRow
            android:layout_marginVertical="@dimen/table_layout_margin_vertical"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/migrated_others"
                android:textColor="@color/gray"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />
            <TextView
                android:id="@+id/district_migratedOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:textColor="@color/black"/>

        </TableRow>
        <TableRow
            android:layout_marginVertical="@dimen/table_layout_margin_vertical"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deceased"
                android:textColor="@color/gray"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
            <TextView
                android:id="@+id/district_deceased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/delta_deceased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_upward_24"
                android:contentDescription="@string/todo" />

        </TableRow>
        <TableRow
            android:layout_marginVertical="@dimen/table_layout_margin_vertical"
            android:background="@color/white"
            android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textColor="@color/gray"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />
            <TextView
                android:id="@+id/district_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/delta_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"
                android:textColor="@color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_upward_24"
                android:contentDescription="@string/todo" />

        </TableRow>


    </TableLayout>
    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="@dimen/table_layout_margin_horizontal"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tableLayout"
        android:text="@string/note"
        android:background="@color/red"
        android:textColor="@color/white"
        android:maxLines="5"/>

</RelativeLayout>
